--- a/design/loader.css
+++ b/design/loader.css
@@ -11,7 +11,8 @@
   margin-left: auto;
   margin-right: auto;
   position: absolute;
-  border: 4px solid rgb(87, 123, 221);
+  border-style: solid;
+  border-width: 4px;
   opacity: 1;
   border-radius: 50%;
   animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
