--- a/design/loader.css
+++ b/design/loader.css
@@ -11,6 +11,7 @@
   margin-left: auto;
   margin-right: auto;
   position: absolute;
+  border-color:#000;
   border-style: solid;
   border-width: 4px;
   opacity: 1;
